DatePicker: fix shortcut panel overflow

--- a/packages/theme-default/src/date-picker/picker-panel.css
+++ b/packages/theme-default/src/date-picker/picker-panel.css
@@ -104,6 +104,7 @@
     box-sizing: border-box;
     padding-top: 6px;
     background-color: var(--color-dark-white);
+    overflow: auto;
   }
 
   .el-picker-panel *[slot=sidebar] + .el-picker-panel__body,
